# c-programming-language

./: .gitignore  CMakeLists.txt  EXERCISES.md  README.md
1_A_Tutorial_Introduction/: a.out  count.c  exercise18.c  filecopy.c  linecount.c  temperature.c
1_A_Tutorial_Introduction/arrays/: count.c  hello.txt  histogram.c  longest.c  reverse.c  trim.c  uncomment.c  uncomment_file.c
1_A_Tutorial_Introduction/io/: exercise110.c  exercise18.c  exercise19.c
2_Types_Operators_and_Expressions/: bitcount.c  lower.c  squeeze.c  types.c  types_conversion.c
2_Types_Operators_and_Expressions/Bitwise_Operators/: binprint.c  binprint.h  bitcount.c  bitcount.h  bits.c  bits.h  bitwise.c  main.c  setbits.c  setbits.h
2_Types_Operators_and_Expressions/bits/: bitcount.c  bitwise.c
3_Control_Flow/: expand.c  itoa.c  itob.c  reverse.c  search.c
4_Functions_and_Program_Structure/: atof.c  grep.c  itoa.c  macro.c  qsort.c  reverse.c
4_Functions_and_Program_Structure/calculator/: Makefile  README.md  calc.h  compile_commands.json  getch.c  getop.c  main.c  rpn.c  stack.c  test_calculator.c
5_Pointers_and_Arrays/date/: main.c
5_Pointers_and_Arrays/getint/: getch.c  getint.c  main.c
5_Pointers_and_Arrays/rpn/: main.c  stack.h
5_Pointers_and_Arrays/sort/: alloc.c  alloc.h  getline.c  main.c  main2.c  qsort.c  qsort.h  readlines.c  readlines2.c  readlines2.h  sample.txt  string.h
5_Pointers_and_Arrays/sort2/: main.c  numcmp.h  readlines.h
5_Pointers_and_Arrays/string/: main.c  strcat.c  strend.c  string.h
5_Pointers_and_Arrays/tail/: alloc.c  main.c  sample.txt  sample3.txt
6_Structures/kewords/: main.c
6_Structures/keywords/: getword.c  getword.h  main.c
6_Structures/wordcount/: getword.c  getword.h  main.c  tree.c  tree.h
LowLevelAcademy/: README.md
LowLevelAcademy/arm/: README.md  hello.s  holmshell.s  io.s  loop.s  simple.s
LowLevelAcademy/arm/shell/: hsh.s
LowLevelAcademy/database/src/: parse.c
LowLevelAcademy/httpserver/: Makefile  README.md  compile_commands.json
LowLevelAcademy/httpserver/include/: common.h  http.h  main.h  route.h  tcp.h
LowLevelAcademy/httpserver/src/: common.c  http.c  main.c  route.c  tcp.c
LowLevelAcademy/httpserver/tests/: response.c
LowLevelAcademy/httpserver/www/: index.html
LowLevelAcademy/network/exercises/: README.md  client.c  server.c
LowLevelAcademy/network/exercises/poll/: README.md  server.c
LowLevelAcademy/network/exercises/select/: README.md  server.c
LowLevelAcademy/network/exercises/simple/: client.c
LowLevelAcademy/network/network/: Makefile  Makefile.demo  Makefile.test  README.md
LowLevelAcademy/network/network/include/: common.h  parse.h  srvpoll.h
LowLevelAcademy/network/network/src/: Makefile
LowLevelAcademy/threads/exercises/: affinity.c  deadlock.c  ex1.c  ex2.c  main.c  mutex.c  semaphore.c
LowLevelAcademy/threads/threadpool/: Makefile  README.md
LowLevelAcademy/threads/threadpool/include/: threadpool.h
LowLevelAcademy/threads/threadpool/src/: main.c  (+1 more)
profiling/c/: Makefile  compile_commands.json  main.c  matrix  matrix.c  matrix.h
profiling/haskell/: haskell.cabal
profiling/haskell/matrix/: Main.hs  Matrix.hs  mmul.cabal
profiling/haskell/matrix/app/: Main.hs
profiling/haskell/matrix/src/: MyMatrix.hs
profiling/haskell/matrix/test/: Main.hs
(+4 files in other folders)
