cabal-version:      3.0
name:               mmul
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    -- Import common warning flags.
    import:           warnings

    -- Modules exported by the library.
    exposed-modules:  MyMatrix

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:
        base ^>=4.18.3.0,
        vector

    -- Directories containing source files.
    hs-source-dirs:   src

    -- Base language which the package is written in.
    default-language: Haskell2010

executable mmul
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        mmul
    hs-source-dirs:   app
    default-language: Haskell2010

-- test-suite mmul-test
--     import:           warnings
--     default-language: Haskell2010
--     type:             exitcode-stdio-1.0

--     hs-source-dirs:   test
--     main-is:          Main.hs
--     build-depends:
--         base ^>=4.18.3.0,
--         mmul
