cabal-version:      3.0
name:               mmul
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyMatrix
    build-depends:
        base ^>=4.18.3.0,
        vector
    hs-source-dirs:   src
    default-language: Haskell2010

executable mmul
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        vector,
        time,
        mmul
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite mmul-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0

    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        mmul,
        HUnit
